# aoc2021

./: .gitignore  README.md  pyproject.toml
.github/workflows/: all.py  run.yaml
01/: README.md  sonar.py
02/: README.md  submarine.py
03/: README.md  diagnostic.py
04/: README.md  bingo.py
05/: README.md  vents.py
06/: README.md  input  lanternfish.py
07/: README.md  crabs.py
08/: README.md  display.py
09/: README.md  smoke.py
10/: README.md  syntax.py
11/: README.md  dumbo.py
12/: README.md  caves.py
13/: README.md  origami.py
14/: README.md  polymer.py
15/: README.md  chitons.py
16/: README.md  packets.py
17/: README.md  probe.py
18/: README.md  snailfish.py
19/: README.md  beacons.py
20/: README.md  image.py
21/: README.md  dirac.py
