[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "Advent of Code 2021"
authors = ["Guillem <guillemglez@users.noreply.github.com>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
